--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
@@ -126,16 +126,7 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
@@ -144,7 +135,16 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
@@ -160,113 +160,14 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 pt-2 product">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
@@ -274,42 +175,141 @@
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 pt-2 product">
                     <div class="card">
                         <div class="card-body">
-                            <h2>Category</h2>
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 pt-2 product">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Product</h2>
                         </div>
                     </div>
                 </div>
