--- a/index.html
+++ b/index.html
@@ -112,6 +112,71 @@
         </div>
 
         <div class="col-7">
+
+            <div class="row text-center subcategory_row">
+
+                <div class="horizontal-scroll">
+   
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 pt-2 subcategory d-inline-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Subcategory</h2>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            </div>
+
             <div class="row text-center overflow-auto" style="max-height: 98rem;">
 
 
